--- a/src/components/Counter/Display.module.css
+++ b/src/components/Counter/Display.module.css
@@ -1,16 +1,16 @@
 .mainBlock{
     position: relative;
     border: 2px solid #5ed5fa;
-    margin: 0 auto;
+    margin: 0 13px;
     width: 310px;
     height: 243px;
     border-radius: 10px;
 }
 
 .displayBlock{
-    background-color:  #5ed5fa;
     border-radius: 10px;
-    color:#2f2f36;
+    border: 2px solid #5ed5fa;
+    color:#5ed5fa;
     padding:20px 10px;
     font-size:86px;
     font-weight:bold;
@@ -19,7 +19,7 @@
 }
 
 .AttentionDisplayBlock {
-    background-color:  #5ed5fa;
+    border: 2px solid #5ed5fa;
     border-radius: 10px;
     color:red;
     padding:20px 10px;
@@ -27,4 +27,16 @@
     font-weight:bold;
     width: 260px;
     margin: 13px auto;
+}
+
+.DisplayControlButton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #5ed5fa;
+    border-radius: 10px;
+    margin: 0 13px;
+}
+.error {
+    color: red;
 }
